--- a/src/components/_recommendations.html
+++ b/src/components/_recommendations.html
@@ -86,35 +86,38 @@
       <div class="swiper recommendations-swiper">
         <ul class="swiper-wrapper">
           <li class="swiper-slide">
-            <a href="#" class="recommendations__card">
-              <figure class="recommendations__card-image">
-                <img
-                  src="./assets/images/sections/recommendations/recommendations-image-1.png"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-1.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-2.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-3.webp"
-                  alt=""
-                />
-                <span class="recommendations__card-row"></span>
-              </figure>
-
-              <p class="recommendations__card-title text__regular-18">
-                Подарочная коробка-переноска для цветов с ручками, 16 см*16
-                см*24 см. (10 шт./упак), пастельно-сирен
-              </p>
-
-              <span class="recommendations__card-articul text__regular-16">
-                Артикул: 4640108881369
-              </span>
+            <article class="recommendations__card">
+              <a href="#" class="recommendations__card-inner">
+                <figure class="recommendations__card-image">
+                  <img
+                    src="./assets/images/sections/recommendations/recommendations-image-1.png"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-1.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-2.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-3.webp"
+                    alt=""
+                  />
+                  <span class="recommendations__card-row"></span>
+                </figure>
+  
+                <p class="recommendations__card-title text__regular-18">
+                  Подарочная коробка-переноска для цветов с ручками, 16 см*16
+                  см*24 см. (10 шт./упак), пастельно-сирен
+                </p>
+  
+                <span class="recommendations__card-articul text__regular-16">
+                  Артикул: 4640108881369
+                </span>
+              </a>
+            
 
               <div class="recommendations__card-group">
                 <button class="recommendations__card-group-button --primary">
@@ -261,38 +264,41 @@ class="recommendations__card-button btn__card">
                   />
                 </div>
               </button>
-            </a>
+            </article>
           </li>
           <li class="swiper-slide">
-            <a href="#" class="recommendations__card">
-              <figure class="recommendations__card-image">
-                <img
-                  src="./assets/images/sections/recommendations/recommendations-image-1.png"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-1.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-2.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-3.webp"
-                  alt=""
-                />
-                <span class="recommendations__card-row"></span>
-              </figure>
-
-              <p class="recommendations__card-title text__regular-18">
-                Подарочная коробка-переноска для цветов с ручками, 16 см*16
-                см*24 см. (10 шт./упак), пастельно-сирен
-              </p>
-
-              <span class="recommendations__card-articul text__regular-16">
-                Артикул: 4640108881369
-              </span>
+            <article class="recommendations__card">
+              <a href="#" class="recommendations__card-inner">
+                <figure class="recommendations__card-image">
+                  <img
+                    src="./assets/images/sections/recommendations/recommendations-image-1.png"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-1.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-2.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-3.webp"
+                    alt=""
+                  />
+                  <span class="recommendations__card-row"></span>
+                </figure>
+  
+                <p class="recommendations__card-title text__regular-18">
+                  Подарочная коробка-переноска для цветов с ручками, 16 см*16
+                  см*24 см. (10 шт./упак), пастельно-сирен
+                </p>
+  
+                <span class="recommendations__card-articul text__regular-16">
+                  Артикул: 4640108881369
+                </span>
+              </a>
+            
 
               <div class="recommendations__card-group">
                 <button class="recommendations__card-group-button --primary">
@@ -439,38 +445,41 @@ class="recommendations__card-button btn__card">
                   />
                 </div>
               </button>
-            </a>
+            </article>
           </li>
           <li class="swiper-slide">
-            <a href="#" class="recommendations__card">
-              <figure class="recommendations__card-image">
-                <img
-                  src="./assets/images/sections/recommendations/recommendations-image-1.png"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-1.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-2.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-3.webp"
-                  alt=""
-                />
-                <span class="recommendations__card-row"></span>
-              </figure>
-
-              <p class="recommendations__card-title text__regular-18">
-                Подарочная коробка-переноска для цветов с ручками, 16 см*16
-                см*24 см. (10 шт./упак), пастельно-сирен
-              </p>
-
-              <span class="recommendations__card-articul text__regular-16">
-                Артикул: 4640108881369
-              </span>
+            <article class="recommendations__card">
+              <a href="#" class="recommendations__card-inner">
+                <figure class="recommendations__card-image">
+                  <img
+                    src="./assets/images/sections/recommendations/recommendations-image-1.png"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-1.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-2.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-3.webp"
+                    alt=""
+                  />
+                  <span class="recommendations__card-row"></span>
+                </figure>
+  
+                <p class="recommendations__card-title text__regular-18">
+                  Подарочная коробка-переноска для цветов с ручками, 16 см*16
+                  см*24 см. (10 шт./упак), пастельно-сирен
+                </p>
+  
+                <span class="recommendations__card-articul text__regular-16">
+                  Артикул: 4640108881369
+                </span>
+              </a>
+            
 
               <div class="recommendations__card-group">
                 <button class="recommendations__card-group-button --primary">
@@ -617,38 +626,41 @@ class="recommendations__card-button btn__card">
                   />
                 </div>
               </button>
-            </a>
+            </article>
           </li>
           <li class="swiper-slide">
-            <a href="#" class="recommendations__card">
-              <figure class="recommendations__card-image">
-                <img
-                  src="./assets/images/sections/recommendations/recommendations-image-1.png"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-1.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-2.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-3.webp"
-                  alt=""
-                />
-                <span class="recommendations__card-row"></span>
-              </figure>
-
-              <p class="recommendations__card-title text__regular-18">
-                Подарочная коробка-переноска для цветов с ручками, 16 см*16
-                см*24 см. (10 шт./упак), пастельно-сирен
-              </p>
-
-              <span class="recommendations__card-articul text__regular-16">
-                Артикул: 4640108881369
-              </span>
+            <article class="recommendations__card">
+              <a href="#" class="recommendations__card-inner">
+                <figure class="recommendations__card-image">
+                  <img
+                    src="./assets/images/sections/recommendations/recommendations-image-1.png"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-1.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-2.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-3.webp"
+                    alt=""
+                  />
+                  <span class="recommendations__card-row"></span>
+                </figure>
+  
+                <p class="recommendations__card-title text__regular-18">
+                  Подарочная коробка-переноска для цветов с ручками, 16 см*16
+                  см*24 см. (10 шт./упак), пастельно-сирен
+                </p>
+  
+                <span class="recommendations__card-articul text__regular-16">
+                  Артикул: 4640108881369
+                </span>
+              </a>
+            
 
               <div class="recommendations__card-group">
                 <button class="recommendations__card-group-button --primary">
@@ -795,38 +807,41 @@ class="recommendations__card-button btn__card">
                   />
                 </div>
               </button>
-            </a>
+            </article>
           </li>
           <li class="swiper-slide">
-            <a href="#" class="recommendations__card">
-              <figure class="recommendations__card-image">
-                <img
-                  src="./assets/images/sections/recommendations/recommendations-image-1.png"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-1.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-2.webp"
-                  alt=""
-                />
-                <img
-                  src="./assets/images/sections/receipts/receipts-image-3.webp"
-                  alt=""
-                />
-                <span class="recommendations__card-row"></span>
-              </figure>
-
-              <p class="recommendations__card-title text__regular-18">
-                Подарочная коробка-переноска для цветов с ручками, 16 см*16
-                см*24 см. (10 шт./упак), пастельно-сирен
-              </p>
-
-              <span class="recommendations__card-articul text__regular-16">
-                Артикул: 4640108881369
-              </span>
+            <article class="recommendations__card">
+              <a href="#" class="recommendations__card-inner">
+                <figure class="recommendations__card-image">
+                  <img
+                    src="./assets/images/sections/recommendations/recommendations-image-1.png"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-1.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-2.webp"
+                    alt=""
+                  />
+                  <img
+                    src="./assets/images/sections/receipts/receipts-image-3.webp"
+                    alt=""
+                  />
+                  <span class="recommendations__card-row"></span>
+                </figure>
+  
+                <p class="recommendations__card-title text__regular-18">
+                  Подарочная коробка-переноска для цветов с ручками, 16 см*16
+                  см*24 см. (10 шт./упак), пастельно-сирен
+                </p>
+  
+                <span class="recommendations__card-articul text__regular-16">
+                  Артикул: 4640108881369
+                </span>
+              </a>
+            
 
               <div class="recommendations__card-group">
                 <button class="recommendations__card-group-button --primary">
@@ -973,7 +988,7 @@ class="recommendations__card-button btn__card">
                   />
                 </div>
               </button>
-            </a>
+            </article>
           </li>
         </ul>
       </div>
