--- a/src/components/_card.html
+++ b/src/components/_card.html
@@ -506,22 +506,13 @@
                             <button class="btn__card">
                                 <span> В корзине </span>
 
-                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="60" height="60" rx="30" fill="#F4F4F4" />
-                                    <path
-                                        d="M25.5 25.6787V24.7087C25.5 22.4587 27.31 20.2487 29.56 20.0387C32.24 19.7787 34.5 21.8887 34.5 24.5187V25.8987"
-                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path
-                                        d="M27.0008 40.0088H33.0008C37.0208 40.0088 37.7408 38.3988 37.9508 36.4388L38.7008 30.4388C38.9708 27.9988 38.2708 26.0088 34.0008 26.0088H26.0008C21.7308 26.0088 21.0308 27.9988 21.3008 30.4388L22.0508 36.4388C22.2608 38.3988 22.9808 40.0088 27.0008 40.0088Z"
-                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M33.4945 30.0087H33.5035" stroke="#1D1D1B" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M26.4945 30.0087H26.5035" stroke="#1D1D1B" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
+                                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="0.183594" y="0.513672" width="32.9737" height="32.9737" rx="16.4869" fill="#2B5644"/>
+                                    <path d="M14.1875 14.6251V14.0921C14.1875 12.8555 15.1822 11.641 16.4187 11.5256C17.8915 11.3827 19.1336 12.5423 19.1336 13.9876V14.746" stroke="white" stroke-width="0.824343" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M15.012 22.5005H18.3094C20.5186 22.5005 20.9143 21.6157 21.0297 20.5386L21.4419 17.2412C21.5902 15.9003 21.2056 14.8066 18.8589 14.8066H14.4624C12.1158 14.8066 11.7311 15.9003 11.8795 17.2412L12.2917 20.5386C12.4071 21.6157 12.8027 22.5005 15.012 22.5005Z" stroke="white" stroke-width="0.824343" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M18.5804 17.0052H18.5853" stroke="white" stroke-width="1.09912" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M14.7366 17.0052H14.7415" stroke="white" stroke-width="1.09912" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
                             </button>
                         </div>
                     </div>
@@ -590,24 +581,24 @@
                             <button class="btn__card">
                                 <span> В корзине </span>
 
-                                <svg width="60" height="60" viewBox="0 0 60 60" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="60" height="60" rx="30" fill="#F4F4F4" />
-                                    <path
-                                        d="M25.5 25.6787V24.7087C25.5 22.4587 27.31 20.2487 29.56 20.0387C32.24 19.7787 34.5 21.8887 34.5 24.5187V25.8987"
-                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path
-                                        d="M27.0008 40.0088H33.0008C37.0208 40.0088 37.7408 38.3988 37.9508 36.4388L38.7008 30.4388C38.9708 27.9988 38.2708 26.0088 34.0008 26.0088H26.0008C21.7308 26.0088 21.0308 27.9988 21.3008 30.4388L22.0508 36.4388C22.2608 38.3988 22.9808 40.0088 27.0008 40.0088Z"
-                                        stroke="#1D1D1B" stroke-width="1.5" stroke-miterlimit="10"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M33.4945 30.0087H33.5035" stroke="#1D1D1B" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                    <path d="M26.4945 30.0087H26.5035" stroke="#1D1D1B" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
+                                <svg width="34" height="34" viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="0.183594" y="0.513672" width="32.9737" height="32.9737" rx="16.4869" fill="#2B5644"/>
+                                    <path d="M14.1875 14.6251V14.0921C14.1875 12.8555 15.1822 11.641 16.4187 11.5256C17.8915 11.3827 19.1336 12.5423 19.1336 13.9876V14.746" stroke="white" stroke-width="0.824343" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M15.012 22.5005H18.3094C20.5186 22.5005 20.9143 21.6157 21.0297 20.5386L21.4419 17.2412C21.5902 15.9003 21.2056 14.8066 18.8589 14.8066H14.4624C12.1158 14.8066 11.7311 15.9003 11.8795 17.2412L12.2917 20.5386C12.4071 21.6157 12.8027 22.5005 15.012 22.5005Z" stroke="white" stroke-width="0.824343" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M18.5804 17.0052H18.5853" stroke="white" stroke-width="1.09912" stroke-linecap="round" stroke-linejoin="round"/>
+                                    <path d="M14.7366 17.0052H14.7415" stroke="white" stroke-width="1.09912" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
                             </button>
                         </div>
+                    </div>
+                </div>
+                <div class="card-modal__btns">
+                    <a href="#"  class=" btn">
+                        Перейти в корзину
+                    </a>
+                    <div class="card-modal__price-inner">
+                        <span class="card-modal__word">Итого</span>
+                        <div class="card-modal__price">4 044 ₽</div>
                     </div>
                 </div>
             </div>
