--- a/src/scss/sections/_card-modal.scss
+++ b/src/scss/sections/_card-modal.scss
@@ -1,7 +1,7 @@
 .card-modal {
     position: absolute;
-    top: 22.2rem;
-    right: 12rem;
+    top: 100%;
+    right: 0;
     display: none;
     @media (max-width: 48em) {
         padding: 2.2rem;
