--- a/src/scss/dev/markusDM.scss
+++ b/src/scss/dev/markusDM.scss
@@ -17,4 +17,5 @@
 @import '../sections/modal-global';
 @import '../sections/card-modal';
 @import '../sections/not-found';
+@import '../sections/person-profile';
 
