--- a/src/scss/sections/_card-modal.scss
+++ b/src/scss/sections/_card-modal.scss
@@ -1,8 +1,9 @@
 .card-modal {
     position: absolute;
-    top: 100%;
-    right: 0;
+    top: 10rem;
+    right: 4rem;
     display: none;
+    z-index: 1000;
     @media (max-width: 48em) {
         padding: 2.2rem;
         content: '';
@@ -264,8 +265,12 @@
     }
 
     &__close {
-        display: none;
-
+       cursor: pointer;
+        display: block;
+        width: 3rem;
+        height: 3rem;
+        margin-bottom: 2rem;
+        margin-left: auto;
         @media (max-width: 48em) {
             display: block;
             width: 4rem;
