--- a/src/components/modals.html
+++ b/src/components/modals.html
@@ -7,17 +7,14 @@
                     <button data-close type="button" class="modal__close">
                         <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
                     </button>
-                    <span class="checkout-complete-modal__heading h h_h2"
-                        >Ваш заказ <span>#123456</span> оформлен!</span
-                    >
+                    <span class="checkout-complete-modal__heading h h_h2">Ваш заказ <span>#123456</span>
+                        оформлен!</span>
                     <p class="checkout-complete-modal__text">
                         Спасибо за выбор компании Миррэй! В ближайшее время с Вами свяжется наш менеджер для
                         уточнения деталей.
                     </p>
                     <div class="checkout-complete-modal__actions">
-                        <a href="#" class="checkout-complete-modal__btn btn btn__white"
-                            >Перейти в личный кабинет</a
-                        >
+                        <a href="#" class="checkout-complete-modal__btn btn btn__white">Перейти в личный кабинет</a>
                         <a href="#" class="checkout-complete-modal__btn btn btn_ghost">Перейти в каталог</a>
                     </div>
                 </div>
@@ -34,18 +31,15 @@
                 <div class="contacts-modal__inner">
                     <ul class="contacts-modal__list">
                         <li class="contacts-modal__list-item">
-                            <span class="contacts-modal__subtitle text text__regular-15"
-                                >Оптовый отдел продаж:</span
-                            >
+                            <span class="contacts-modal__subtitle text text__regular-15">Оптовый отдел продаж:</span>
                             <a class="contacts-modal__link text text__regular-18">8 800 600 28 20</a>
                             <p class="contacts-modal__text text text__regular-15">
                                 Пн - Пт: с 9:00 до 18:00  Сб, Вс: : выходные
                             </p>
                         </li>
                         <li class="contacts-modal__list-item">
-                            <span class="contacts-modal__subtitle text text__regular-15"
-                                >Оптово-розничный магазин:</span
-                            >
+                            <span class="contacts-modal__subtitle text text__regular-15">Оптово-розничный
+                                магазин:</span>
                             <a class="contacts-modal__link text text__regular-18">8 800 600 28 20</a>
                             <p class="contacts-modal__text text text__regular-15">
                                 Пн - Вс: с 8:00 до 18:30 Без выходных
@@ -68,17 +62,14 @@
                     <button data-close type="button" class="modal__close">
                         <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
                     </button>
-                    <span class="checkout-complete-modal__heading h h_h2"
-                        >Ваш заказ <span>#123456</span> оформлен!</span
-                    >
+                    <span class="checkout-complete-modal__heading h h_h2">Ваш заказ <span>#123456</span>
+                        оформлен!</span>
                     <p class="checkout-complete-modal__text">
                         Спасибо за выбор компании Миррэй! Данные для личного кабинета направлены на почту
                         "farexampe@.com"
                     </p>
                     <div class="checkout-complete-modal__actions">
-                        <a href="#" class="checkout-complete-modal__btn btn btn__white"
-                            >Перейти к регистрации</a
-                        >
+                        <a href="#" class="checkout-complete-modal__btn btn btn__white">Перейти к регистрации</a>
                         <a href="#" class="checkout-complete-modal__btn btn btn_ghost">Перейти в каталог</a>
                     </div>
                 </div>
@@ -149,11 +140,7 @@
 </div>
 
 <!-- отмена подписки -->
-<div
-    id="cancelSubscriptionModal"
-    aria-hidden="true"
-    class="modal checkout-complete-modal checkout-complete-modal_sub"
->
+<div id="cancelSubscriptionModal" aria-hidden="true" class="modal checkout-complete-modal checkout-complete-modal_sub">
     <div class="modal__wrapper">
         <div class="modal__content">
             <div class="modal__body">
@@ -161,9 +148,7 @@
                     <button data-close type="button" class="modal__close">
                         <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
                     </button>
-                    <span class="checkout-complete-modal__heading h h_h2"
-                        >Вы действительно хотите отписаться?</span
-                    >
+                    <span class="checkout-complete-modal__heading h h_h2">Вы действительно хотите отписаться?</span>
                     <div class="checkout-complete-modal__actions">
                         <button type="button" class="checkout-complete-modal__btn btn btn__white">
                             Подтвердить
@@ -182,11 +167,13 @@
 <div class="modal-global modal-global-email">
     <div class="modal-global__container">
         <button class="modal-global__close">
-            <svg  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M17.8828 17.8796L6.00342 6.00016M17.882 6L11.9431 11.9399" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M9.6 14.275L6 17.875" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.8828 17.8796L6.00342 6.00016M17.882 6L11.9431 11.9399" stroke="white" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M9.6 14.275L6 17.875" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+
         </button>
         <div class="consultation__content">
             <div class="consultation__info">
@@ -198,20 +185,12 @@
 
                 <form data-dev action="#" class="consultation__info-form">
                     <div class="input text__regular-16">
-                        <input
-                            id="email"
-                            data-validate
-                            data-required
-                            autocomplete="off"
-                            type="email"
-                            name="form[]"
-                            placeholder="Почта"
-                            class="input__field"
-                        />
+                        <input id="email" data-validate data-required autocomplete="off" type="email" name="form[]"
+                            placeholder="Почта" class="input__field" />
                         <label for="email" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
 
-                
+
 
                     <button type="submit" class="consultation__info-form-button form__btn btn">
                         Сохранить
@@ -229,35 +208,28 @@
 <div class="modal-global modal-global-phone">
     <div class="modal-global__container">
         <button class="modal-global__close">
-            <svg  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M17.8828 17.8796L6.00342 6.00016M17.882 6L11.9431 11.9399" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                <path d="M9.6 14.275L6 17.875" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                </svg>
-                
+            <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M17.8828 17.8796L6.00342 6.00016M17.882 6L11.9431 11.9399" stroke="white" stroke-width="1.5"
+                    stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M9.6 14.275L6 17.875" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+
         </button>
         <div class="consultation__content">
             <div class="consultation__info">
                 <h2 class="consultation__info-title h h_h1">Введите новый номер телефона</h2>
 
-                
+
 
                 <form data-dev action="#" class="consultation__info-form">
                     <div class="input text__regular-16">
-                        <input
-                            id="phone"
-                            data-tel-mask
-                            data-validate
-                            data-required
-                            autocomplete="off"
-                            type="tel"
-                            name="form[]"
-                            placeholder="Ваш телефон"
-                            class="input__field"
-                        />
+                        <input id="phone" data-tel-mask data-validate data-required autocomplete="off" type="tel"
+                            name="form[]" placeholder="Ваш телефон" class="input__field" />
                         <label for="phone" class="input__label" data-hint="*Заполните поле"></label>
                     </div>
 
-                
+
 
                     <button type="submit" class="consultation__info-form-button form__btn btn">
                         Сохранить
@@ -276,75 +248,75 @@
 <!-- консультация модал -->
 <div id="modalConsultation" aria-hidden="true" class="modal modal__consultation">
     <div class="modal__wrapper">
-      
-        <div class= "modal__content">
+
+        <div class="modal__content">
             <button data-close type="button" class="modal__close">
-                <svg  viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M17.8828 17.8796L6.00342 6.00016M17.882 6L11.9431 11.9399" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    <path d="M9.6 14.275L6 17.875" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-                    </svg>
+                <svg viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M17.8828 17.8796L6.00342 6.00016M17.882 6L11.9431 11.9399" stroke="white"
+                        stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
+                    <path d="M9.6 14.275L6 17.875" stroke="white" stroke-width="1.5" stroke-linecap="round"
+                        stroke-linejoin="round" />
+                </svg>
             </button>
             <div class="modal__body">
-               
+
                 <div class="consultation__content">
                     <div class="consultation__info">
                         <h2 class="consultation__info-title h h_h1">Нужна консультация?</h2>
-        
+
                         <p class="consultation__info-text text__regular-18">
                             Оставьте свои данные, и наш менеджер перезвонит вам в ближайшее время
                         </p>
-        
+
                         <form data-dev action="#" class="consultation__info-form">
                             <div class="input text__regular-16">
-                                <input
-                                    id="name"
-                                    data-validate
-                                    data-required
-                                    autocomplete="off"
-                                    type="text"
-                                    name="form[]"
-                                    placeholder="Ваше имя"
-                                    class="input__field"
-                                />
+                                <input id="name" data-validate data-required autocomplete="off" type="text"
+                                    name="form[]" placeholder="Ваше имя" class="input__field" />
                                 <label for="name" class="input__label" data-hint="*Заполните поле"></label>
                             </div>
-        
+
                             <div class="input text__regular-16">
-                                <input
-                                    id="phone"
-                                    data-tel-mask
-                                    data-validate
-                                    data-required
-                                    autocomplete="off"
-                                    type="tel"
-                                    name="form[]"
-                                    placeholder="Ваш телефон"
-                                    class="input__field"
-                                />
+                                <input id="phone" data-tel-mask data-validate data-required autocomplete="off"
+                                    type="tel" name="form[]" placeholder="Ваш телефон" class="input__field" />
                                 <label for="phone" class="input__label" data-hint="*Заполните поле"></label>
                             </div>
-        
+
                             <div class="input text__regular-16 textarea">
-                                <textarea
-                                    id="text-field"
-                                    data-validate
-                                    data-required
-                                    autocomplete="off"
-                                    name="form[]"
-                                    placeholder="Ваш вопрос"
-                                    class="input__field"
-                                ></textarea>
+                                <textarea id="text-field" data-validate data-required autocomplete="off" name="form[]"
+                                    placeholder="Ваш вопрос" class="input__field"></textarea>
                                 <label for="text-field" class="input__label" data-hint="*Заполните поле"></label>
                             </div>
-        
+
                             <button type="submit" class="consultation__info-form-button form__btn btn">
                                 Отправить
                             </button>
                         </form>
                     </div>
-        
+
                     <div class="consultation__poster">
                         <img class="consultation__poster-img" src="./assets/images/bg/1828042537.webp" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+<div id="checkoutCompleteGloabl" aria-hidden="true" class="modal checkout-complete-modal">
+    <div class="modal__wrapper">
+        <div class="modal__content">
+            <div class="modal__body">
+                <div class="checkout-complete-modal__inner">
+                    <button data-close type="button" class="modal__close">
+                        <img src="./assets/images/icons/cross-white.svg" alt="" class="modal__close-icon" />
+                    </button>
+                    <span class="checkout-complete-modal__heading h h_h2">Ваш заявка отправлена</span>
+
+                    <div class="checkout-complete-modal__actions">
+                        <a href="#" class="checkout-complete-modal__btn btn btn__white">Перейти на главную</a>
+                     
                     </div>
                 </div>
             </div>
