--- a/src/components/header.html
+++ b/src/components/header.html
@@ -544,7 +544,7 @@
                     <a href="#">Контакты</a>
                 </nav>
                 <div class="header__buttons">
-                    <button data-modal="#modalConsultation" type="submit" class="btn">Заказать звонок</button>
+                    <button data-modal="#checkoutCompleteGloabl" type="submit" class="btn">Заказать звонок</button>
                     <div class="header__phone">
                         <button class="header__phone-btn">
                             <svg width="29" height="28" viewBox="0 0 29 28" fill="none"
