--- a/src/scss/sections/_card.scss
+++ b/src/scss/sections/_card.scss
@@ -26,7 +26,7 @@
   &__wrapper {
     display: flex;
     position: relative;
-
+    align-items: flex-start;
     &._is-disabled {
       .card__left {
         @media (min-width: 48em) {
@@ -62,7 +62,7 @@
   &__swiper {
     max-width: 100%;
     overflow: hidden;
-    margin-bottom: 3.2rem;
+    
     &-slide-content {
       position: relative;
     }
@@ -206,7 +206,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-
+    margin-top: 3.2rem;
     .swiper-button-prev,
     .swiper-button-next {
       svg {
