--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -158,12 +158,13 @@
         position: relative;
 
         .left-icon {
-            top: 1.4rem;
-            transform: none;
+            top: 50%;
+            transform: translate(0, -50%);
+           
 
-            @media (max-width: 48em) {
-                top: 1.4rem;
-            }
+            // @media (max-width: 48em) {
+            //     top: 3rem;
+            // }
         }
 
         svg,
