--- a/src/scss/sections/_catalog.scss
+++ b/src/scss/sections/_catalog.scss
@@ -642,9 +642,10 @@
     }
 
     &-field {
-      &:not(:last-child) {
-        margin-bottom: 3rem;
-      }
+      margin-top: 2rem;
+      // &:not(:last-child) {
+      //   margin-bottom: 3rem;
+      // }
 
       &:last-child {
         margin-bottom: 2rem;
