--- a/src/ui/styles/_recommendations-card.scss
+++ b/src/ui/styles/_recommendations-card.scss
@@ -1047,7 +1047,7 @@
     display: flex;
     align-items:center;
     justify-content: space-between;
-    width: 35rem;
+    width: 100%;
     background-color: #fff;
     border: 0.1rem solid #2B5644;
     border-radius: 6rem;
@@ -1060,9 +1060,9 @@
       display: flex;
       align-items:center;
       justify-content: space-between;
-      width: 22rem;
+      width: 100%;
       @media (max-width: 48em) {
-        width: 45rem;
+        width: 100%;
       }
     }
 
